delete spot or review css is done, form input textarea css done, all spacing needs to be fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -89,3 +89,20 @@ img {
 .padding-bottom {
   padding-bottom: 20px;
 }
+
+textarea {
+  display: block;
+  width: 100%;
+  height: 100px;
+  border: 2px solid black;
+  /* light-blue-input */
+  background-color: rgba(200, 226, 242, 0.515);
+}
+input {
+  display: block;
+  width: 100%;
+  height: 30px;
+  border: 2px solid black;
+  /* light-blue-input */
+  background-color: rgba(200, 226, 242, 0.515);
+}
